<resources>
    <string name="app_name">People Finder</string>
    <string name="title_person_detail">Person Detail</string>
    <string name="title_activity_maps">Map It</string>
    <string name="title_place_detail">Place Detail</string>
    <string name="title_activity_locate_me">Locate Me</string>
    <string name="title_activity_home">People Finder</string>
    <string name="title_activity_mail">Send Mail</string>
    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>

    </string-array>

    <string-array name="regions_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>

    </string-array>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="fetch_address">Show Nearest Address</string>
    <string name="no_geocoder_available">no_geocoder_available</string>
    <string name="address_found">Fetch Address Found</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="no_location_data_provided">No Location data Provided</string>
    <string name="invalid_lat_long_used">Invalid Lat Long used</string>
    <string name="no_address_found">No Address Found</string>

    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="addthisplace">Add this Place</string>
    <string name="addthisperson">Add this Person</string>
    <string name="list_people">List Places</string>
    <string name="list_places">List People</string>
    <string name="new_person">New Person</string>
    <string name="new_place">New Place</string>
    <string name="add">Add New</string>
    <string name="list">List</string>
    <string name="google_maps_key_old">AIzaSyAu8BnS8V69-OT8kRjDu_BZDevnEofGuzA</string>
    <string name="google_maps_key">AIzaSyB5N47QWzHwQqdS0wExvqkQQir0XQ9zIZo</string>
    <string name="title_activity_image_picker">ImagePicker</string>
    <string name="title_activity_phone">PhoneActivity</string>
    <string name="title_activity_add_picture">AddPictureActivity</string>
    <string name="title_activity_take_picture">Take a Picture</string>

</resources>
